--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "ejs": "^2.5.6",
     "express": "^4.15.3",
     "express-session": "^1.15.5",
+    "formidable": "^1.1.1",
     "knex": "^0.13.0",
     "method-override": "^2.3.9",
     "mocha": "^3.4.2",
     "moment": "^2.18.1",
     "mysql": "^2.13.0",
-    "node-sass": "^4.5.3"
+    "node-sass": "^4.5.3",
+    "nodemailer": "^4.0.1"
   }
 }
